[package]
name = "overcomplicating-things"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
clap = { version = "4.1.4", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["blocking", "multipart"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
unsafe_fn = "0.1.2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true